# GPU-Load-Power-Profiler

./: .gitignore  CMakeLists.txt  README.md
cuda/: heavy_hash.cu
include/: config.h  heavy_hash.h  nvml_monitor.h
scripts/: analyze.py  live.py  plots.py
src/: config.cpp  main.cpp  scheduler.cpp
telemetry/: logger.cpp  nvml_monitor.cpp
vulkan/: sha256.comp  vulkan_runner.cpp
